fix: resource viewer and properties gap

--- a/apps/dsp-app/src/app/workspace/resource/resource.component.scss
+++ b/apps/dsp-app/src/app/workspace/resource/resource.component.scss
@@ -3,7 +3,6 @@
 
 .representation-container {
   width: 100%;
-  margin-bottom: 64px;
   min-width: 500px;
 }
 
